web-application-deployment.yaml
---

apiVersion: apps/v1

kind: Deployment

metadata:

  labels:

    app: web-application 

  name: web-application 

spec:

  replicas: 1

  strategy:

    type: Recreate

  selector:

    matchLabels:

      app: web-application

  template:

    metadata:

      labels:

        app: web-application

    spec:

      containers:

      - image: id_dockerhib/server:latest #imagen

        name: web-application

        imagePullPolicy: Always        

        resources:

          limits:

            cpu: "0.6"

            memory: "512Mi"

          requests:

            cpu: "0.3"

            memory: "256Mi"
