web-application-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: web-application

  annotations:

    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-application
            port:
              number: 80
